codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_exec_footer__tests__render_mixed_processes.snap
---
source: tui/src/bottom_pane/unified_exec_footer.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 1 },
    content: [
        "  1 shell, 2 monitors · ↓ to manage                                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
